# gpf

./: README.md  README_STREAMLIT.md  app.py  app_streamlit.py  app_streamlit_simple.py  imghdr.py  pyproject.toml  requirements.txt  requirements_streamlit.txt  streamlit_test.py
data/: README.md  analysis_results_urban-rural_movement_20250404164902.json  combined_raw_data_20250404163407.json  combined_raw_data_20250404163432.json  combined_raw_data_20250404163839.json  combined_raw_data_20250404163849.json  combined_raw_data_20250404163918.json  combined_raw_data_20250404164555.json  combined_raw_data_20250404164820.json  processed_data_20250404163929.csv  processed_data_20250404164609.csv  processed_data_20250404164637.csv  processed_data_20250404164823.csv  processed_data_20250404164847.csv  raw_academic_research_papers_20250404163918.json  raw_academic_research_papers_20250404164555.json  raw_academic_research_papers_20250404164820.json  raw_china_national_bureau_of_statistics_20250404163910.json  raw_china_national_bureau_of_statistics_20250404164548.json  raw_china_national_bureau_of_statistics_20250404164812.json
scrapers/: guangdong_population_scraper.py
templates/: index.html
utils/: data_analyzer.py  data_processor.py  visualizer.py
